# pycfast

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CITATION.cff  CITATIONS.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  LICENSE  Makefile  README.md  conftest.py  pyproject.toml
.github/: copilot-commit-message-instructions.md  copilot-instructions.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: docs.yml  joss.yml  lint.yml  python-publish.yml  sync-cfast-inputs.yml  sync-cfast-ref-doc.yml  sync-cfast-verif-file.yml  test.yml  toolchain-compatibility.yml  typing.yml  validation.yml
docs/: generate_readme_screenshots.py  update_cfast_ref.sh
docs/cfast-reference/: .cfast_version
docs/source/: acknowledgments.rst  citation.rst  conf.py  examples.rst  getting_started.rst  index.rst  installation.rst  licence.rst  license.rst  sg_execution_times.rst
docs/source/_static/: custom.css  version.json
docs/source/_templates/: pycfast_footer.html
docs/source/_templates/autosummary/: class.rst
docs/source/api/: cfastmodel.rst  components.rst  datasets.rst  index.rst  parser.rst
examples/: GALLERY_HEADER.rst  plot_01_basic_usage.py  plot_02_parsing_cfast_input_files.py  plot_03_generating_data.py  plot_04_sensitivity_analysis.py  plot_05_optimization.py  plot_06_surrogate_models.py  plot_07_parallel_computing.py  plot_07_parrallel_computing.py
paper/: literature_review.md  litterature_review.md  paper.bib  paper.md
scripts/: build_cfast.py
src/pycfast/: __init__.py  _base_component.py  ceiling_floor_vent.py  ceiling_floor_vents.py  compartment.py  compartments.py  component.py  device.py  devices.py  fire.py  fires.py  material.py  material_properties.py  mechanical_vent.py  mechanical_vents.py  model.py  simulation_environment.py  surface_connection.py  surface_connections.py  wall_vent.py  wall_vents.py
src/pycfast/_cfast_bin/: __init__.py
src/pycfast/datasets/: __init__.py  _sp_ast_diesel.py
src/pycfast/parsers/: __init__.py  cfast_parser.py
src/pycfast/utils/: __init__.py  csv_config.py  namelist.py  theme.py
tests/: csv_comparison.py  generate_reference_data.py  generate_verif_data.py  sync_cfast_inputs.sh  update_cfast_verif.sh
tests/fixtures/doctest/: example.in
tests/units/: test__sp_ast_diesel.py  test_ceiling_floor_vent.py  test_ceiling_floor_vents.py  test_cfast_parser.py  test_compartment.py  test_compartments.py  test_device.py  test_devices.py  test_fire.py  test_fires.py  test_material.py  test_material_properties.py  test_mechanical_vent.py  test_mechanical_vents.py  test_model.py  test_simulation_environment.py  test_surface_connection.py  test_surface_connections.py  test_wall_vent.py  test_wall_vents.py
tests/validation_tests/: __init__.py  test_parser_validation.py
tests/verification_tests/: __init__.py  test_DOE_Guidance_Report.py  test_NRC_A_cabinet_fire_in_mcr.py  test_NRC_B_cabinet_fire_in_switchgear.py  test_NRC_D_mcc_fire_in_switchgear.py  test_NRC_E_trash_fire_in_cable_spreading_room.py  test_NRC_G_transient_fire_in_corridor.py  test_energy_balance.py  test_error.py  test_fires.py  test_mass_balance.py  test_model.py  test_parser_verification.py  test_radiation.py  test_species.py  test_sprinkler.py  test_target.py  test_thermal_equilibrium.py  test_ventilation.py  verification.py
